--- a/src/app/lights/lights.component.html
+++ b/src/app/lights/lights.component.html
@@ -1,6 +1,6 @@
 <div class="wrapper">
   <app-light
-    *ngFor="let light of lights$ | async; let i = index;"
+    *ngFor="let light of lights; let i = index;"
     [light]="light"
     [id]="i+1"
     (inputActive)="onMakeRequestChange($event)">
